--- a/jeff/mg3.5/ThreeDShoot/ThreeDShoot.csproj
+++ b/jeff/mg3.5/ThreeDShoot/ThreeDShoot.csproj
@@ -61,6 +61,7 @@
   <ItemGroup>
     <MonoGameContentReference Include="Content\Content.mgcb" />
     <None Include="app.manifest" />
+    <None Include="Content\Arial.spritefont" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\MonoGameLibrary\MonoGameLibrary.csproj">
