--- a/jeff/mg3.5/MonoGameLibrary/MonoGameLibrary.csproj
+++ b/jeff/mg3.5/MonoGameLibrary/MonoGameLibrary.csproj
@@ -47,6 +47,7 @@
     <Compile Include="Events\EventData.cs" />
     <Compile Include="GameComponents\Audio\SoundSimpleComponent.cs" />
     <Compile Include="GameComponents\Player\PlayerController.cs" />
+    <Compile Include="GameFiles\FileSystem.cs" />
     <Compile Include="Network\ClientInfo.cs" />
     <Compile Include="Network\GameClient.cs" />
     <Compile Include="Network\GameNetwork.cs" />
