--- a/jeff/mg3.5/UnitTestMathDecorator/UnitTestMathDecorator.csproj
+++ b/jeff/mg3.5/UnitTestMathDecorator/UnitTestMathDecorator.csproj
@@ -13,4 +13,8 @@
     <PackageReference Include="coverlet.collector" Version="1.0.1" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\ConsoleAppMathDecorator\ConsoleAppMathDecorator.csproj" />
+  </ItemGroup>
+
 </Project>
