--- a/jeff/mg3.5/JSONOjbectMap/JSONOjbectMap.csproj
+++ b/jeff/mg3.5/JSONOjbectMap/JSONOjbectMap.csproj
@@ -46,6 +46,7 @@
     <Compile Include="JSONFileParser.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="test.cs" />
     <Compile Include="XMLFileParser.cs" />
   </ItemGroup>
   <ItemGroup>
