--- a/jeff/mg3.5/ThreeDShoot/ThreeDShoot.csproj
+++ b/jeff/mg3.5/ThreeDShoot/ThreeDShoot.csproj
@@ -62,6 +62,7 @@
     <MonoGameContentReference Include="Content\Content.mgcb" />
     <None Include="app.manifest" />
     <None Include="Content\Arial.spritefont" />
+    <None Include="Content\monkey.fbx" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\MonoGameLibrary\MonoGameLibrary.csproj">
